--- a/src/index.html
+++ b/src/index.html
@@ -97,8 +97,6 @@
         </div>
       </div>
     </div>
-    <!--
-
     <div class="tickets-sections">
       <div class="container">
         <div class="row">
@@ -138,6 +136,9 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
+    <!--
+
+     -->
   </body>
 </html>
